testsuite/tests/properties/invalid_raise/not_string/test.lkt
from common import FooNode

class Example: FooNode implements TokenNode {
    fun p(): Int = raise[Int] PropertyError(1)
}
